tests/neg/imports.scala
import scala.collection.{*, View} // error
object test
